Unit test fixup: Pass <input readonly>'s inner text to ShouldShowIBeamForNode()

ShouldShowIBeamForNode() returns false for nodes that aren't TextNode.

That's why we need pass the <input>'s inner text (the inner-editor's
child node) to test ShouldShowIBeamForNode() properly.

This CL can be seen as a fixup to:
https://chromium-review.googlesource.com/#/c/663217/ .

Bug: 764661
Change-Id: I6fbc97841f29db33405e8cf6293614c3186111d0
Reviewed-on: https://chromium-review.googlesource.com/700454
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Commit-Queue: Hugo Holgersson <hugoh@vewd.com>
Cr-Commit-Position: refs/heads/master@{#507366}
Former-commit-id: cd79e17ec56bba732e6295877c7c9c896950271d